syntax = "proto3";
package analytics;

option go_package = "CodeMart/proto/analytics;analyticspb";

message Empty {}

service AnalyticsService {
  rpc LogProductView (ProductView) returns (Response);
  rpc GetTopProducts (Empty) returns (TopProducts);
}

message ProductView {
  int32 user_id = 1;
  int32 product_id = 2;
}

message TopProducts {
  repeated int32 product_ids = 1; // IDs, detailed info via ProductService
}

message Response {
  string message = 1;
}
